syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.naren.sample.grpc.api";
option java_outer_classname = "HelloWorld";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc Metric (MetricRequest) returns (MetricReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The request message containing the user's name.
message MetricRequest {
  string name = 1;
}

// The response message containing the greetings
message MetricReply {
  string metric = 1;
}


 
